# tortoise_tts_api

./: .gitignore  .gitmodules  README.md  notes.txt  pyproject.toml  requirements.txt  test.py
tortoise_tts_api/: infer.py  train.py
tortoise_tts_api/inference/: generate.py  load.py
